@@ -95,8 +95,6 @@ usb 0x055f 0x021a
 # Autodetect Mustek BearPaw 2400 CU Plus
 usb 0x055f 0x021d
 
-# Mustek BearPaw 2400 CU Plus doesn't need any manual settings
-
 ##############################################################################
 # Autodetect Mustek Bearpaw 1200 CU Plus and Packard Bell Diamond 1200
 usb 0x055f 0x021c
@@ -116,8 +114,6 @@ usb 0x055f 0x0210
 ##############################################################################
 # Autodetect Lexmark X70/X73
 usb 0x043d 0x002d
-
-# Lexmark X70/X73 don't need any manual settings
 
 ##############################################################################
 # Autodetect Plustek OpticPro 1248U and Revscan 19200i
@@ -158,25 +154,20 @@ usb 0x0458 0x2011
 # Autodetect Genius Colorpage Vivid4x
 usb 0x0458 0x201b
 
-# Genius Colorpage Vivid4x doesn't need any manual settings
-
 ##############################################################################
 # Autodetect Genius Colorpage Vivid3xe
 usb 0x0458 0x2017
-
-# Genius Colorpage Vivid3xe doesn't need any manual settings
 
 ##############################################################################
 # Autodetect Genius Colorpage Vivid4xe
 usb 0x0458 0x201a
 
-# Genius Colorpage Vivid4xe doesn't need any manual settings
-##############################################################################
-
 ##############################################################################
 # Autodetect Genius Colorpage 1200 EX
 usb 0x0458 0x201f
 
-# Genius Colorpage Vivid 1200 EX doesn't need any manual settings
 ##############################################################################
+# Autodetect Visioneer OneTouch 7300
+usb 0x04a7 0x0444
 
+##############################################################################
