@@ -1,4 +1,4 @@
-.TH sane-gt68xx 5 "22 Feb 2004" "@PACKAGEVERSION@" "SANE Scanner Access Now Easy"
+.TH sane-gt68xx 5 "4 Apr 2004" "@PACKAGEVERSION@" "SANE Scanner Access Now Easy"
 .IX sane-gt68xx
 .SH NAME
 sane-gt68xx \- SANE backend for GT-68XX based USB flatbed scanners
@@ -68,6 +68,10 @@ Packard Bell Diamond 1200 (Plus)
 Packard Bell Diamond 2450
 .br
 Plustek OpticPro 1248U
+.br
+Plustek OpticPro U16B (+)
+.br
+Plustek OpticPro UT16B (+)
 .br
 Plustek OpticSlim 1200
 .br
